--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 <p id="eight">8</p>
                 <p id="nine">9</p>
                 <div id="number-option">
-                    <button class="pen-off" onclick="noteWrite()"></button>
-                    <button class="delete"></button>
+                <button class="pen-off" onclick="noteWrite()"></button>
+                <button class="delete"></button>
+                <button class="solution" onclick="createSolution()"></button>
             </div>
             </div>
         </div>
